--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
   audioplayers: ^6.1.0
+  flutter_local_notifications: ^20.0.0
+  onesignal_flutter: ^5.4.1
 
 dev_dependencies:
   flutter_test:
